chore: front --> refactor listing history

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,5 +1,3 @@
-@import "vendors/tailwind.sass";
-
 @import "components/breadcrumb.sass";
 @import "components/buttons.sass";
 @import "components/scrolldown.sass";
@@ -8,8 +6,9 @@
 @import "layout/forms.sass";
 @import "layout/footer.sass";
 @import "layout/navigation.sass";
+@import "pages/listing-story.sass";
 
-@import url("https://fonts.googleapis.com/css2?family=Unna:wght@400;700&family=Work+Sans:wght@400;600;700&display=swap");
+@import "vendors/tailwind.sass";
 
 /* CircularStd @font-face kit */
 @font-face {
@@ -2320,233 +2319,6 @@ nav {
 }
 
 /*---LISTING PAGE DETAILS---*/
-/*---STORY PAGE DETAILS---*/
-
-#listingPage.story {
-  .listing-owner {
-    .avatar {
-      max-height: 50px;
-      height: 50px;
-    }
-  }
-  .listing-header-wrapper {
-    padding: 30px;
-  }
-  .listing-header,
-  .listing-subtitle-inner,
-  .listing-header-meta,
-  .listing-body {
-    max-width: 650px;
-    margin: 0 auto;
-    display: block;
-  }
-  .listing-subtitle {
-    margin-top: 10px;
-    font-size: 1.2rem;
-  }
-  .listing-header-meta {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .col {
-      padding: 0;
-      display: flex;
-      align-items: center;
-    }
-    .listing-owner a {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      img {
-        border-radius: 100px;
-        width: 50px;
-        height: auto;
-      }
-      .listing-owner-name {
-        margin: 0;
-      }
-    }
-    .separator {
-      margin: 0 8px;
-    }
-    .reading-time p {
-      margin: 0;
-    }
-    .col.right {
-      display: flex;
-      justify-content: flex-end;
-      .listing-bookmark-wrapper {
-        display: flex;
-        align-items: center;
-      }
-      .listing-bookmark {
-        border: none;
-        background-color: #f2f7f9;
-        border-radius: 100px !important;
-        width: 40px;
-        height: 40px;
-        margin-right: 12px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        -webkit-transition: 0.3s;
-        transition: 0.3s;
-      }
-      span {
-        display: block;
-        border-bottom: 2px solid #00206b;
-      }
-    }
-  }
-  .listing-cover {
-    .cover {
-      height: 650px;
-    }
-    .cover-text {
-      text-align: center;
-      font-size: 0.8rem;
-      margin: 12px 0;
-      color: $dark-blue;
-      opacity: 0.8;
-    }
-  }
-  .separator-body {
-    text-align: center;
-    margin: 40px 0;
-    .separator-body-wrapper {
-      max-width: 80px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin: 0 auto;
-      span {
-        display: block;
-        font-size: 0.7rem;
-      }
-    }
-  }
-  .listing-body {
-    h2 {
-      font-size: 1.7rem;
-      margin: 20px 0;
-    }
-    p:first-child {
-      margin-top: 0;
-    }
-    p:last-child {
-      margin-bottom: 0;
-    }
-    p {
-      margin: 18px 0;
-    }
-    blockquote {
-      margin: 25px 0;
-      display: initial;
-      background: #f7e5b0;
-    }
-    .pswp-thumbnails {
-      display: flex;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      flex-direction: row;
-      margin: 0 -7px;
-    }
-    .pswp-thumbnail {
-      margin: 7px;
-      width: 31.126%;
-      max-height: 148px;
-      overflow: hidden;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .pswp-thumbnail img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-    .pswp img {
-      max-width: none;
-      object-fit: contain;
-      background-color: transparent;
-    }
-    .listing-details-box {
-      margin-bottom: 20px;
-      a,
-      button {
-        display: flex;
-        flex-direction: row;
-        svg {
-          margin-right: 12px;
-        }
-        h3 {
-          font-size: 1em;
-          margin: 0;
-        }
-        p {
-          margin-top: 5px;
-        }
-      }
-      button {
-        background-color: white;
-        text-align: left;
-        align-items: center;
-      }
-    }
-  }
-  .cta-instagram-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 40px 0 60px 0;
-    border-top: 1px solid #e7ebf5;
-    padding-top: 40px;
-    h2 {
-      text-align: center;
-      font-size: 1.9em;
-      line-height: 1.4em;
-    }
-    .link-instagram {
-      margin: 15px 0 5px 0;
-    }
-    .link-instagram a {
-      font-size: 1.3em;
-      display: flex;
-      align-items: center;
-      color: #f03e51;
-      letter-spacing: 0.8px;
-      svg {
-        margin-left: 12px;
-      }
-    }
-    .banner-wrapper {
-      display: flex;
-      align-items: center;
-      margin-top: 40px;
-      .left,
-      .right {
-        position: relative;
-        border-radius: 4px;
-        overflow: hidden;
-        box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.2);
-      }
-      .left {
-        transform: rotate(-7deg);
-        z-index: 1;
-        left: 25px;
-      }
-      .right {
-        transform: rotate(3deg);
-        z-index: 0;
-      }
-      img {
-        width: 290px;
-        border: 5px solid #ffffff;
-      }
-    }
-  }
-}
 
 /*---STORY PAGE DETAILS---*/
 /*---LIST PAGE DETAILS---*/
