add: front --> update layout lists

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -6,7 +6,8 @@
 @import "layout/forms.sass";
 @import "layout/footer.sass";
 @import "layout/navigation.sass";
-@import "pages/listing-story.sass";
+@import "pages/layout-story.sass";
+@import "pages/layout-lists.sass";
 
 @import "vendors/tailwind.sass";
 
