add: front --> layout contact

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -8,6 +8,8 @@
 @import "layout/navigation.sass";
 @import "pages/layout-story.sass";
 @import "pages/layout-lists.sass";
+@import "pages/layout-list.sass";
+@import "base/global.sass";
 
 @import "vendors/tailwind.sass";
 
