feaat: front --> slider histories

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -12,6 +12,7 @@
 @import "base/global.sass";
 
 @import "vendors/tailwind.sass";
+@import "vendors/swiper.sass";
 
 /* CircularStd @font-face kit */
 @font-face {
