--- a/styles/app.scss
+++ b/styles/app.scss
@@ -6,6 +6,7 @@
 @import "layout/forms.sass";
 @import "layout/footer.sass";
 @import "layout/navigation.sass";
+@import "pages/layout-stories.sass";
 @import "pages/layout-story.sass";
 @import "pages/layout-lists.sass";
 @import "pages/layout-list.sass";
