--- a/styles/layout/navigation.sass
+++ b/styles/layout/navigation.sass
@@ -9,3 +9,23 @@
             @apply text-primary-500
             svg
                 @apply stroke-primary-500
+
+    .menu__responsive
+        @apply bg-white fixed -right-full top-0 w-72 md:w-96 h-full shadow-xl transition-all duration-300 ease-in-out pt-20 px-5 pb-5
+
+        .menu
+            &__link
+                @apply py-2
+
+            &__close
+                @apply absolute top-5 right-5
+
+        .search-box
+            @apply relative
+            input
+                @apply pl-10
+            .icon
+                @apply absolute left-2 top-1/2 transform -translate-y-1/2
+
+        &.open
+            @apply right-0
