fix: front --> performance home + infoboxes google maps

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2,6 +2,7 @@
 @import "components/buttons.sass";
 @import "components/scrolldown.sass";
 @import "components/listingsquarebox.sass";
+@import "components/mapsInfoBox";
 @import "components/modal.sass";
 @import "layout/forms.sass";
 @import "layout/footer.sass";
