--- a/styles/components/buttons.sass
+++ b/styles/components/buttons.sass
@@ -13,12 +13,12 @@ $background-input: #f2f7f9
 	.button__primary
 		@apply inline-flex items-center bg-primary-500 text-white
 		&:hover
-			@apply bg-primary-500 text-white
+			@apply bg-primary-400 text-white
 
 	.button__secondary
-		@apply inline-flex items-center bg-secondary-100 text-primary-200 border border-primary-200
+		@apply inline-flex items-center bg-white text-primary-500 border border-primary-500
 		&:hover
-			@apply bg-primary-100 border-primary-100 text-secondary-100
+			@apply bg-primary-400 border-primary-400 text-white
 
 	.button__ghost
 		@apply inline-flex items-center bg-transparent text-primary-400 border border-primary-300  
