chore: front --> trying to fix cls

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -509,6 +509,8 @@ nav {
 
 #homepage {
   #hero {
+    min-height: 419px;
+    min-width: auto;
     .wrapper {
       background: #fef8f2;
       border-radius: 10px;
