--- a/styles/app.scss
+++ b/styles/app.scss
@@ -510,6 +510,26 @@ nav {
 
 #homepage {
   #hero {
+    .hero__bg {
+      background-image: linear-gradient(
+        35deg,
+        hsl(30deg 86% 97%) 0%,
+        hsl(71deg 34% 96%) 12%,
+        hsl(145deg 33% 96%) 22%,
+        hsl(182deg 33% 96%) 31%,
+        hsl(204deg 47% 96%) 40%,
+        hsl(239deg 53% 96%) 48%,
+        hsl(318deg 53% 95%) 57%,
+        hsl(360deg 100% 95%) 65%,
+        hsl(348deg 83% 94%) 74%,
+        hsl(284deg 38% 93%) 83%,
+        hsl(219deg 52% 92%) 91%,
+        hsl(194deg 40% 90%) 100%
+      );
+    }
+    .hero__gradient {
+      background: linear-gradient(0deg, white, transparent);
+    }
     .hero-wrapper {
       min-height: 419px;
       min-width: auto;
