--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,4 +1,5 @@
 @import "components/breadcrumb.sass";
+@import "components/dropdown.sass";
 @import "components/buttons.sass";
 @import "components/scrolldown.sass";
 @import "components/listingsquarebox.sass";
@@ -1402,52 +1403,6 @@ nav {
 }
 
 .content.box {
-	.image,
-	.title,
-	.subtitle,
-	.date,
-	.crud-buttons {
-		padding: 8px 12px;
-	}
-	.image {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background-color: white;
-		overflow: hidden;
-		height: 40px;
-		width: 40px;
-		max-width: 40px;
-		max-height: 40px;
-		border-radius: 8px;
-		padding: 0;
-		margin: 12px 43px;
-	}
-	.image img {
-		width: auto;
-		height: 100%;
-		background-color: white;
-		display: block;
-	}
-	.title {
-		font-size: 1.1em;
-		margin: 0;
-		min-width: 437.5px;
-		max-width: 437.5px;
-		overflow: hidden;
-	}
-	.subtitle {
-		min-width: 375px;
-		max-width: 375px;
-		font-size: 0.9em;
-	}
-	.date {
-		width: 187.5px;
-	}
-	.crud-buttons {
-		width: 10%;
-		text-align: center;
-	}
 	.subtitle,
 	.date {
 		margin: 0;
