--- a/styles/layout/forms.sass
+++ b/styles/layout/forms.sass
@@ -1,10 +1,12 @@
 @layer components
 	.form
 		@apply -m-1.5
+		&__wrapper
+			@apply bg-white rounded-md p-5 shadow border border-primary-300
 		&__group
 			@apply p-1.5
 		&__label
-			@apply block mb-2 text-xs font-medium text-primary-400
+			@apply block mb-2 text-sm font-medium text-primary-400
 		&__control
 			@apply bg-primary-100 border border-primary-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
   
