--- a/styles/layout/forms.sass
+++ b/styles/layout/forms.sass
@@ -4,9 +4,14 @@
 		&__wrapper
 			@apply bg-white rounded-md p-5 shadow border border-primary-300
 		&__group
-			@apply p-1.5
+			@apply p-1.5 flex flex-col
+
 		&__label
 			@apply block mb-2 text-sm font-medium text-primary-400
+
+		&__text_info
+			@apply text-xs mt-2 text-primary-400
+
 		&__control
 			@apply bg-primary-100 border border-primary-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
   
