feat: front --> layout llista (wip)

--- a/styles/pages/layout-list.sass
+++ b/styles/pages/layout-list.sass
@@ -1,6 +1,39 @@
 .list
     &__description
+        counter-reset: h2
+
+        h2
+            @apply text-xl relative flex items-center mt-4
+            @screen md
+                @apply text-2xl
+        
+        h2::before
+            counter-increment: h2
+            content: counter(h2)
+            position: relative
+            top: 0
+            left: 0
+            width: 30px
+            height: 30px
+            border: 1px solid
+            @apply mr-3 rounded-full flex items-center justify-center bg-white
+
+            @screen md
+                position: absolute
+                left: -70px
+                width: 40px
+                height: 40px
+
+        img
+            @apply rounded-md
+
+        p:first-of-type
+            @apply my-0
+
         p:not(:first-child)
             @apply mb-5
-        img:not(:first-child)
-            @apply mt-12
+
+        img:not(:first-of-type)
+            @apply mt-10
+            @screen md
+                @apply mt-16
