add: front --> update layout lists

--- a/styles/pages/layout-list.sass
+++ b/styles/pages/layout-list.sass
@@ -18,7 +18,7 @@
             border: 1px solid
             @apply mr-3 rounded-full flex items-center justify-center bg-white
 
-            @screen md
+            @screen lg
                 position: absolute
                 left: -70px
                 width: 40px
