--- a/styles/pages/layout-story.sass
+++ b/styles/pages/layout-story.sass
@@ -1,14 +1,14 @@
 .listing-story
-	p:first-child
-		@apply mt-0 mb-5
-	p
-		@apply my-5
-	blockquote
-		@apply mb-8 border-l border-primary-500 bg-opacity-50 pl-7 text-lg font-medium
-
-	.pswp-thumbnails
-		@apply flex items-stretch flex-wrap -mx-2 mb-6
-	.pswp-thumbnail
-		@apply p-2 w-full md:w-1/3 overflow-hidden flex items-center justify-center
-	.pswp-thumbnail img
-		@apply w-full h-full object-cover rounded
+	.listing-description
+		p:first-child
+			@apply mt-0 mb-5
+		p
+			@apply my-5
+		blockquote
+			@apply mb-8 border-l border-primary-500 bg-opacity-50 pl-7 text-lg font-medium
+		.pswp-thumbnails
+			@apply flex items-stretch flex-wrap -mx-2 mb-6
+		.pswp-thumbnail
+			@apply p-2 w-full md:w-1/3 overflow-hidden flex items-center justify-center
+		.pswp-thumbnail img
+			@apply w-full h-full object-cover rounded
