--- a/styles/components/breadcrumb.sass
+++ b/styles/components/breadcrumb.sass
@@ -1,8 +1,8 @@
 @layer components
     .breadcrumb
-        @apply text-sm flex flex-wrap items-center
+        @apply text-sm flex items-center overflow-x-auto
         &__item
-            @apply px-2 flex items-center
+            @apply px-2 flex items-center whitespace-nowrap
         &__item:not(:last-child)::after
             content: "/"
             @apply mx-0.5 block text-primary-400 
