add: front --> floating publication button admin panel

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -15,6 +15,7 @@
 @import "pages/layout-stories.sass";
 @import "pages/layout-story.sass";
 @import "pages/layout-empreses.sass";
+@import "pages/layout-admin.sass";
 @import "base/global.sass";
 
 @import "vendors/cookie-consent.sass";
